Optimised the staff searchbar, users may now use arrow keys and press enter to search

--- a/pages/html/staff_page.html
+++ b/pages/html/staff_page.html
@@ -31,10 +31,10 @@
         <button type="submit" class="navbar_button blue_button" id="sign_out_button" name="staff_sign_out"><span class="left_arrow"></span><spacer></spacer><h5>LOG OUT</h5></button>
       </form>
       <span class="divider"></span>
-      <container class="search_bar_container">
-        <div class="search_bar_wrapper">
+      <container class="searchbar_container">
+        <div class="searchbar_wrapper">
           <input id="staff_searchbar" type="search" name="search" placeholder="Search..."></input>
-          <button type="submit">
+          <button id="staff_searchbar_button">
             <i class="fa fa-search"></i>
           </button>
         </div>
