Optimised how CSS stylesheets are loaded across the various pages, they are now linked in the HTML rather than @included in the PHP

--- a/pages/html/staff_page.html
+++ b/pages/html/staff_page.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
 <head>
+<!-- CSS stylesheets -->
+<link rel="stylesheet" type="text/css" href="../../css/mainstyles.css">
+<link rel="stylesheet" type="text/css" href="../../css/staff_page.css">
+
 <!-- jQuery UI -->
 <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
@@ -28,7 +32,7 @@
     <h1>DOYRMS Registration</h1>
     <navbar>
       <form method="post">
-        <button type="submit" class="navbar_button blue_button" id="sign_out_button" name="staff_sign_out"><span class="left_arrow"></span><spacer></spacer><h5>LOG OUT</h5></button>
+        <button type="submit" class="navbar_button blue_button" id="sign_out_button" name="staff_sign_out"><span class="left_arrow"></span><spacer></spacer><h5>SIGN OUT</h5></button>
       </form>
       <span class="divider"></span>
       <container class="searchbar_container">
