--- a/pages/html/admin_page.html
+++ b/pages/html/admin_page.html
@@ -1,5 +1,10 @@
 <!DOCTYPE html>
 <head>
+<!-- CSS stylesheets -->
+<link rel="stylesheet" type="text/css" href="../../css/mainstyles.css">
+<link rel="stylesheet" type="text/css" href="../../css/staff_page.css">
+<link rel="stylesheet" type="text/css" href="../../css/admin_page.css">
+
 <!-- jQuery UI -->
 <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
