Improved database security, the file 'app.ini' now contains the database credentials and all database actions are performed using these

--- a/pages/html/home_page.html
+++ b/pages/html/home_page.html
@@ -2,7 +2,7 @@
 <head>
 <!-- CSS stylesheets -->
 <link rel="stylesheet" type="text/css" href="../../css/mainstyles.css">
-<link rel="stylesheet" type="text/css" href="../../css/main_page.css">
+<link rel="stylesheet" type="text/css" href="../../css/home_page.css">
 
 <!-- jQuery UI -->
 <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
