Finished the CSS and HTML structure for the staff popup menus;
-> Also made some minor changes to the data presented by some tables on the staff page
-> Added new SVG images: bell, github, linkedIn, padlock-closed, sign-in/out-door

--- a/pages/html/staff_page.html
+++ b/pages/html/staff_page.html
@@ -92,10 +92,12 @@
               <divider></divider>
               <ul>
                 <li id="download_data_button" class="overlay_trigger" data-trigger-type="download"><img src="../../images/svg/download.svg" alt="Download SVG"><h4>Download data</h4></li>
-                <li id="sign_out_user_button" class="overlay_trigger" data-trigger-type="signout"><img src="../../images/svg/sign-in-out.svg" class="flip" alt="Out SVG"><h4>Sign user out</h4></li>
-                <li id="sign_in_user_button" class="overlay_trigger" data-trigger-type="signin"><img src="../../images/svg/sign-in-out.svg" alt="In SVG"><h4>Sign user in</h4></li>
-                <li id="restrict_user_button" class="overlay_trigger" data-trigger-type="restrict"><img src="../../images/svg/padlock.svg" alt="Padlock SVG"><h4>Restrict user</h4></li>
-                <li id="away_user_button" class="overlay_trigger" data-trigger-type="markaway"><img src="../../images/svg/sign-away.svg" alt="Door SVG"><h4>Mark user as away</h4></li>
+                <li id="sign_in_user_button" class="overlay_trigger" data-trigger-type="signin"><img src="../../images/svg/sign-in-circle.svg" alt="Sign in circle SVG"><h4>Sign user in</h4></li>
+                <li id="sign_out_user_button" class="overlay_trigger" data-trigger-type="signout"><img src="../../images/svg/sign-out-circle.svg" alt="Sign out circle SVG"><h4>Sign user out</h4></li>
+                <li id="restrict_user_button" class="overlay_trigger" data-trigger-type="restrict"><img src="../../images/svg/padlock-closed.svg" alt="Locked Padlock SVG"><h4>Restrict user</h4></li>
+                <li id="unrestrict_user_button" class="overlay_trigger" data-trigger-type="unrestrict"><img src="../../images/svg/padlock-open.svg" alt="Unlocked Padlock SVG"><h4>Unrestrict user</h4></li>
+                <li id="away_user_button" class="overlay_trigger" data-trigger-type="markaway"><img src="../../images/svg/sign-out-door.svg" alt="Sign out door SVG"><h4>Mark user away</h4></li>
+                <li id="present_user_button" class="overlay_trigger" data-trigger-type="markpresent"><img src="../../images/svg/sign-in-door.svg" alt="Sign in door SVG"><h4>Mark user present</h4></li>
               </ul>
             </aside>
             <section class="body_section">
