--- a/pages/html/popups/mark_user_present.html
+++ b/pages/html/popups/mark_user_present.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<!-- This file contains the HTML code used to structure the 'restrict user' popup -->
+<!-- This file contains the HTML code used to structure the 'mark user away' popup -->
 <!-- It is intended to be loaded via JavaScript not loaded directly -->
 <div class="card text" style="transform: translateY(-100px)">
   <header>
     <div class="close">
       <img src="../../images/svg/cross.svg" alt="X">
     </div>
-    <h3>Restrict User</h3>
+    <h3>Mark User Present</h3>
   </header>
   <divider></divider>
   <form id="sign_user_out_form">
@@ -16,14 +16,6 @@
       <ul id="user_name_suggestions" class="suggested_inputs"></ul>
     </div>
     <div style="margin: 10px 0 10px 0;"></div>
-    <label for="user_event_time"><h4>End Date</h4></label>
-    <input type="date" id="date_field" name="date_field" value="" autocomplete="off"/>
-    <div style="margin: 10px 0 10px 0;"></div>
-    <label for="user_event_time"><h4>End Time</h4></label>
-    <input type="time" id="time_field" name="time_field" value="" autocomplete="off"/>
-    <div style="margin: 10px 0 10px 0;"></div>
-    <label for="user_location_field"><h4>Reason</h4></label>
-    <textarea type="text" id="user_message_field" name="message_field" placeholder="Optional" value="" autocomplete="off" pattern="[a-zA-Z0-9\s]+"></textarea>
     <div style="margin: 10px 0 10px 0;"></div>
     <button type="submit" id="sign_user_out_button"><h4>Submit</h4></button>
   </form>
