--- a/pages/html/popups/sign_user_in.html
+++ b/pages/html/popups/sign_user_in.html
@@ -9,4 +9,25 @@
     <h3>Sign User In</h3>
   </header>
   <divider></divider>
+  <form id="sign_user_in_form">
+    <label for="user_name_field"><h4>Name</h4></label>
+    <div class="search_wrapper">
+      <input required type="text" class="capitalize" id="user_name_field" name="name_field" placeholder="Required" value="" autocomplete="off" pattern="[a-zA-Z\s]+"/>
+      <ul id="user_name_suggestions" class="suggested_inputs"></ul>
+    </div>
+    <div style="margin: 10px 0 10px 0;"></div>
+    <label for="user_event_field"><h4>Event</h4></label>
+    <div class="search_wrapper">
+      <input type="text" class="capitalize" id="user_event_field" data-nature="signin" name="event_field" placeholder="Optional" value="" autocomplete="off" pattern="[a-zA-Z\s]+"/>
+      <ul id="user_event_suggestions" class="suggested_inputs"></ul>
+    </div>
+    <div style="margin: 10px 0 10px 0;"></div>
+    <label for="user_location_field"><h4>Message</h4></label>
+    <textarea type="text" id="user_message_field" name="message_field" placeholder="Optional" value="" autocomplete="off" patter="[a-zA-Z0-9\s]+"></textarea>
+    <div style="margin: 10px 0 10px 0;"></div>
+    <label for="user_event_time"><h4>Time</h4></label>
+    <input type="time" id="time_field" name="time_field" value="" autocomplete="off"/>
+    <div style="margin: 10px 0 10px 0;"></div>
+    <button type="submit" id="sign_user_in_button"><h4>Submit</h4></button>
+  </form>
 </div>
