Completed the Javascript and PHP requried for the staff popup menus
-> Staff users can now do the following via a popup menu:
	+ Sign users out
	+ Sign users in
	+ Restrict/Unrestrict users
	+ Mark users away/present
-> Also made some changes to the way in which an 'away' user is stored. Now their location is treated as NULL and they are signed in when being set to away

--- a/pages/html/popups/sign_user_in.html
+++ b/pages/html/popups/sign_user_in.html
@@ -23,11 +23,9 @@
     </div>
     <div style="margin: 10px 0 10px 0;"></div>
     <label for="user_location_field"><h4>Message</h4></label>
-    <textarea type="text" id="user_message_field" name="message_field" placeholder="Optional" value="" autocomplete="off" patter="[a-zA-Z0-9\s]+"></textarea>
-    <div style="margin: 10px 0 10px 0;"></div>
-    <label for="user_event_time"><h4>Time</h4></label>
-    <input type="time" id="time_field" name="time_field" value="" autocomplete="off"/>
+    <textarea type="text" id="user_message_field" name="message_field" placeholder="Optional" value="" autocomplete="off" pattern="[a-zA-Z0-9\s]+"></textarea>
     <div style="margin: 10px 0 10px 0;"></div>
     <button type="submit" id="sign_user_in_button"><h4>Submit</h4></button>
+    <div class="error_wrapper"></div>
   </form>
 </div>
