--- a/pages/html/staff_page.html
+++ b/pages/html/staff_page.html
@@ -27,7 +27,7 @@
 
 <meta charset="UTF-8" lang="en">
 <meta name="viewport" content="width=device-width,initial-scale=1">
-<title>Home | DOYRMS Registration</title>
+<title><?=$_SESSION["staffUsername"]?> | DOYRMS Registration</title>
 </head>
 
 <section id="staff_overlay" class="text"></section>
