--- a/pages/html/home_page.html
+++ b/pages/html/home_page.html
@@ -3,6 +3,7 @@
 <!-- CSS stylesheets -->
 <link rel="stylesheet" type="text/css" href="../../css/mainstyles.css">
 <link rel="stylesheet" type="text/css" href="../../css/home_page.css">
+<link rel="shortcut icon" href="../../images/png/logo.png" /> 
 
 <!-- jQuery UI -->
 <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
