--- a/pages/html/popups/mark_user_away.html
+++ b/pages/html/popups/mark_user_away.html
@@ -9,7 +9,7 @@
     <h3>Mark User Away</h3>
   </header>
   <divider></divider>
-  <form id="sign_user_out_form">
+  <form id="mark_user_away_form">
     <label for="user_name_field"><h4>Name</h4></label>
     <div class="search_wrapper">
       <input required type="text" class="capitalize" id="user_name_field" name="name_field" placeholder="Required" value="" autocomplete="off" pattern="[a-zA-Z\s]+"/>
@@ -22,9 +22,10 @@
     <label for="user_event_time"><h4>Time expected back</h4></label>
     <input type="time" id="time_field" name="time_field" value="" autocomplete="off"/>
     <div style="margin: 10px 0 10px 0;"></div>
-    <label for="user_location_field"><h4>Message</h4></label>
+    <label for="user_location_field"><h4>Reason</h4></label>
     <textarea type="text" id="user_message_field" name="message_field" placeholder="Optional" value="" autocomplete="off" pattern="[a-zA-Z0-9\s]+"></textarea>
     <div style="margin: 10px 0 10px 0;"></div>
     <button type="submit" id="sign_user_out_button"><h4>Submit</h4></button>
+    <div class="error_wrapper"></div>
   </form>
 </div>
