--- a/pages/html/popups/mark_user_present.html
+++ b/pages/html/popups/mark_user_present.html
@@ -9,7 +9,7 @@
     <h3>Mark User Present</h3>
   </header>
   <divider></divider>
-  <form id="sign_user_out_form">
+  <form id="mark_user_present_form">
     <label for="user_name_field"><h4>Name</h4></label>
     <div class="search_wrapper">
       <input required type="text" class="capitalize" id="user_name_field" name="name_field" placeholder="Required" value="" autocomplete="off" pattern="[a-zA-Z\s]+"/>
@@ -18,5 +18,6 @@
     <div style="margin: 10px 0 10px 0;"></div>
     <div style="margin: 10px 0 10px 0;"></div>
     <button type="submit" id="sign_user_out_button"><h4>Submit</h4></button>
+    <div class="error_wrapper"></div>
   </form>
 </div>
