--- a/pages/html/popups/sign_user_out.html
+++ b/pages/html/popups/sign_user_out.html
@@ -31,9 +31,7 @@
     <label for="user_location_field"><h4>Message</h4></label>
     <textarea type="text" id="user_message_field" name="message_field" placeholder="Optional" value="" autocomplete="off" pattern="[a-zA-Z0-9\s]+"></textarea>
     <div style="margin: 10px 0 10px 0;"></div>
-    <label for="user_event_time"><h4>Time</h4></label>
-    <input type="time" id="time_field" name="time_field" value="" autocomplete="off"/>
-    <div style="margin: 10px 0 10px 0;"></div>
     <button type="submit" id="sign_user_out_button"><h4>Submit</h4></button>
+    <div class="error_wrapper"></div>
   </form>
 </div>
