Optimised the PHP used to load staff tables
Made the following additions:
-> Added the option to mark users as early or late in the sign user in/out staff popup menus. This is done using a range slider that appears when an event is selected.
-> New file to store functions used across the various table PHP files

Made the following changes:
-> Improved the PHP error handling when incorrect data is submitted via a staff popup menu, more appropriate error messages are now sent as a response
-> Staff can no longer sign out users who are marked as being 'away' or 'restricted'
-> Better messages are logged in the recent activity table, stating the nature of the action
-> Fixed an issue where the event tables were displaying incorrect timings, early entries were treated as late vice versa

I also started using Visual Studio Code, I was previously using Atom but since Microsoft axed it I've had to find another alternative

--- a/pages/html/popups/sign_user_out.html
+++ b/pages/html/popups/sign_user_out.html
@@ -18,16 +18,22 @@
     <div style="margin: 10px 0 10px 0;"></div>
     <label for="user_location_field"><h4>Location</h4></label>
     <div class="search_wrapper">
-      <input required type="text" class="capitalize" id="user_location_field" name="location_field" placeholder="Required" value="" autocomplete="off" pattern="[a-zA-Z\s]+"/>
+      <input type="text" class="capitalize" id="user_location_field" name="location_field" placeholder="Conditional" value="" autocomplete="off" pattern="[a-zA-Z\s]+"/>
       <ul id="user_location_suggestions" class="suggested_inputs"></ul>
     </div>
     <div style="margin: 10px 0 10px 0;"></div>
     <label for="user_event_field"><h4>Event</h4></label>
     <div class="search_wrapper">
-      <input type="text" class="capitalize" id="user_event_field" data-nature="signout" name="event_field" placeholder="Optional" value="" autocomplete="off" pattern="[a-zA-Z\s]+"/>
+      <input type="text" class="capitalize" id="user_event_field" data-nature="signout" name="event_field" placeholder="Conditional" value="" autocomplete="off" pattern="[a-zA-Z\s]+"/>
       <ul id="user_event_suggestions" class="suggested_inputs"></ul>
     </div>
-    <div style="margin: 10px 0 10px 0;"></div>
+    <div style="margin: 10px 0px 10px 0;"></div>
+    <div class="event_timing_wrapper">
+      <label for="event_timing"><h4>Timing</h4></label>
+      <input is="user_event_timing" name="event_timing" type="range" step="1" min="-45" max="45"></input>
+      <output>On Time</output>
+      <div style="margin: 10px 0 10px 0;"></div>
+    </div>
     <label for="user_location_field"><h4>Message</h4></label>
     <textarea type="text" id="user_message_field" name="message_field" placeholder="Optional" value="" autocomplete="off" pattern="[a-zA-Z0-9\s]+"></textarea>
     <div style="margin: 10px 0 10px 0;"></div>
