--- a/pages/html/admin_page.html
+++ b/pages/html/admin_page.html
@@ -4,6 +4,7 @@
 <link rel="stylesheet" type="text/css" href="../../css/mainstyles.css">
 <link rel="stylesheet" type="text/css" href="../../css/staff_page.css">
 <link rel="stylesheet" type="text/css" href="../../css/admin_page.css">
+<link rel="shortcut icon" href="../../images/png/logo.png" /> 
 
 <!-- jQuery UI -->
 <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
