--- a/pages/html/staff_page.html
+++ b/pages/html/staff_page.html
@@ -19,8 +19,10 @@
 
 <!-- staff page javascript functions -->
 <script src="../../scripts/staff_page_functions.js"></script>
-<!-- staff page javascript functions -->
+<!-- staff popup menus -->
 <script src="../../scripts/jquery/staff/overlay_popups.js"></script>
+<!-- form field suggestions -->
+<script type="text/javascript" src="../../scripts/jquery/form_field_suggestions.js"></script>
 <!-- searchbar autocompletion -->
 <script src="../../scripts/jquery/staff/searchbar_autocomplete.js"></script>
 <!-- keep data on the page refreshed and up to date -->
