Made the idle overlay display current time and date

--- a/pages/html/home_page.html
+++ b/pages/html/home_page.html
@@ -28,7 +28,8 @@
 </head>
 
 <section id="idle_overlay" onclick="hideOverlay()" class="text">
-  <h1>Press to Start</h1>
+  <container></container>
+  <h4>Press to Start</h4>
 </section>
 <body>
   <header class="text" id="main_header">
